--- a/public/css/tablet.css
+++ b/public/css/tablet.css
@@ -399,8 +399,9 @@ html {
 
 /***********************  SignUp BLOCK ***********************/
 .signup {
-  padding: 40px 0;
   background: #f4f5f0;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .signup__content--wrapper {
@@ -439,10 +440,12 @@ html {
 
 /***********************  FYS BLOCK ***********************/
 .fys {
-  padding: 100px 0 100px 60px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .fys__content--wrapper {
+  padding-left: 60px;
   display: flex;
   align-items: center;
 }
